refactor(Main): Separación clases Calculator

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     },
     "autoload": {
         "psr-4": {
-            "OpenAI\\": "src/"
+            "OpenAI\\": "src/",
+            "App\\": "src/"
         },
         "files": [
             "src/OpenAI.php"
