--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "test:refactor": "rector process --dry-run",
         "test:types": "phpstan analyse --ansi",
         "test:type-coverage": "php -d memory_limit=256M vendor/bin/pest --type-coverage --min=100",
-        "test:unit": "pest --colors=always",
+        "test:unit": "pest --colors=always tests/Cdr",
         "test": [
             "@test:lint",
             "@test:refactor",
