feat(Config): added weather apikey

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 OPENAI_API_KEY=sk-proj-XXXXXXXXX
 OPENAI_ASSISTANT_ID=asst_YYYYYYYY
+WEATHER_API_KEY=e4262XXXXXYYYYYY # https://home.openweathermap.org/api_keys
